Added crud page for Student model.

--- a/dmit2015-firebase-faces-app/src/main/webapp/WEB-INF/faces-templates/layout.xhtml
+++ b/dmit2015-firebase-faces-app/src/main/webapp/WEB-INF/faces-templates/layout.xhtml
@@ -46,6 +46,8 @@
 
                     <p:menuitem value="Hello" url="#{request.contextPath}/demo/helloFaces" />
 
+                    <p:menuitem value="Student" url="#{request.contextPath}/student/crud.xhtml" />
+
                     <p:submenu label="Counter" >
                         <p:menuitem value="Faces version"
                                     url="#{request.contextPath}/demo/counter-faces" />
