--- a/dmit2015-firebase-faces-app/src/main/webapp/WEB-INF/faces-templates/layout.xhtml
+++ b/dmit2015-firebase-faces-app/src/main/webapp/WEB-INF/faces-templates/layout.xhtml
@@ -31,6 +31,8 @@
     <h:outputStylesheet library="webjars" name="primeflex/3.3.1/primeflex.min.css"/>
     <h:outputStylesheet library="webjars" name="primeflex/3.3.1/themes/primeone-light.css"/>
 
+    <h:outputStylesheet library="css" name="styles.css" />
+
     <ui:insert name="headscripts">
     </ui:insert>
 </h:head>
