--- a/dmit2015-firebase-faces-app/src/main/webapp/student/crud.xhtml
+++ b/dmit2015-firebase-faces-app/src/main/webapp/student/crud.xhtml
@@ -74,6 +74,15 @@
                     <p:column headerText="Course Section">
                         <h:outputText value="#{currentItem.courseSection}"/>
                     </p:column>
+                    <p:column headerText="Picture">
+                        <h:graphicImage value="#{currentItem.imageDataUrl}"
+                                        alt="Student Picture"
+                                        rendered="#{not empty currentItem.imageDataUrl}"
+                                        width="64"
+                                        height="64"
+                                        />
+
+                    </p:column>
 
                     <p:column exportable="false" ariaHeaderText="Actions">
                         <p:commandButton icon="pi pi-pencil"
@@ -100,7 +109,7 @@
                 </p:dataTable>
             </h:form>
 
-            <h:form id="dialogs">
+            <h:form id="dialogs" enctype="multipart/form-data">
                 <p:dialog header="Student Details" showEffect="fade" modal="true" widgetVar="manageStudentDialog"
                           responsive="true">
 
@@ -131,6 +140,13 @@
                                         id="courseSection"
                                         value="#{currentStudentCrudView.selectedStudent.courseSection}">
                                 </p:inputText>
+                            </div>
+                            <div class="field">
+                                <p:outputLabel for="@next">Image Upload</p:outputLabel>
+                                <p:fileUpload
+                                    id="imageUpload"
+                                    value="#{currentStudentCrudView.imageFileUpload}"
+                                    mode="simple" skinSimple="true"/>
                             </div>
 
                         </p:outputPanel>
