--- a/dmit2015-jpa-faces-app/src/main/webapp/student/crud.xhtml
+++ b/dmit2015-jpa-faces-app/src/main/webapp/student/crud.xhtml
@@ -71,6 +71,19 @@
                     <p:column headerText="Course Section">
                         <h:outputText value="#{currentItem.courseSection}"/>
                     </p:column>
+                    <p:column headerText="Picture">
+                        <p:graphicImage
+                                value="#{currentItem.picture}"
+                                stream="false"
+                                alt="Picture of Student"
+                                rendered="#{not empty currentItem.picture}"
+                                width="64"
+                                height="64"
+                        />
+                        <h:outputText rendered="#{empty currentItem.picture}">
+                            No Picture Available
+                        </h:outputText>
+                    </p:column>
 
                     <p:column exportable="false" ariaHeaderText="Actions">
                         <p:commandButton icon="pi pi-pencil"
@@ -97,7 +110,7 @@
                 </p:dataTable>
             </h:form>
 
-            <h:form id="dialogs">
+            <h:form id="dialogs" enctype="multipart/form-data">
                 <p:dialog header="Student Details" showEffect="fade" modal="true" widgetVar="manageStudentDialog"
                           responsive="true">
 
@@ -128,6 +141,15 @@
                                         id="courseSection"
                                         value="#{currentStudentCrudView.selectedStudent.courseSection}">
                                 </p:inputText>
+                            </div>
+                            <div class="field">
+                                <p:outputLabel for="@next">Picture</p:outputLabel>
+                                <p:fileUpload
+                                        id="picture"
+                                        mode="simple"
+                                        skinSimple="true"
+                    value="#{currentStudentCrudView.uploadedImageFile}">
+                                </p:fileUpload>
                             </div>
 
                         </p:outputPanel>
